--- a/Examples/NetMongoMigrator.Console.Example/NetMongoMigrator.Console.Example.csproj
+++ b/Examples/NetMongoMigrator.Console.Example/NetMongoMigrator.Console.Example.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\MongoMigrator.Console\MongoMigrator.Console.csproj" />
+    <ProjectReference Include="..\..\NetMongoMigrator.Console\NetMongoMigrator.Console.csproj" />
   </ItemGroup>
 
 </Project>
