--- a/NetMongoMigrator.Console/NetMongoMigrator.Console.csproj
+++ b/NetMongoMigrator.Console/NetMongoMigrator.Console.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MongoMigrator.Core\MongoMigrator.Core.csproj" />
+    <ProjectReference Include="..\NetMongoMigrator.Core\NetMongoMigrator.Core.csproj" />
   </ItemGroup>
 
 </Project>
