--- a/NetMongoMigrator.Console/NetMongoMigrator.Console.csproj
+++ b/NetMongoMigrator.Console/NetMongoMigrator.Console.csproj
@@ -1,10 +1,27 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+	<PackageId>NetMongoMigrator.Console</PackageId>
+	<Version>0.1.0</Version>
+	<Authors>Piotr Paszko</Authors>
+	<PackageLicenseExpression>MIT</PackageLicenseExpression>
+	<Title>NetMongoMigrator.Console</Title>
+	<RepositoryUrl>https://github.com/piter10p/NetMongoMigrator</RepositoryUrl>
+	<RepositoryType>git</RepositoryType>
+	<PackageTags>net mongo migrator migraton console</PackageTags>
+	<PackageReadmeFile>readme.md</PackageReadmeFile>
+	<Description>Console implementation of NetMongoMigrator - MongoDB migration library for .NET</Description>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\readme.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
